--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="msvalidate.01" content="85ACBDE96BB7D87E5CE89949893D235B" />
   <meta name="google-adsense-account" content="ca-pub-8616038278873218">
+  <meta property="og:image" content="assets/images/FeatureGraphics.png" />
   <title> LiveryBus</title>
   <!-- favicon -->
   <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
