--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
   <link rel="stylesheet" href="assets/css/responsive.css">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8616038278873218"
      crossorigin="anonymous"></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PXJS8BEJFN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PXJS8BEJFN');
+</script>
+  
 </head>
 
 <body>
