--- a/index.html
+++ b/index.html
@@ -201,8 +201,7 @@
                 </div>
                 <h4 class="title">Well Designed UI</h4>
                 <p class="text">
-                  Hopes lived by rooms oh in no death house. Contented direction september but end led excellent
-                  ourselves.
+                 Well designed UI which is easy to understand.
                 </p>
               </div>
             </div>
@@ -211,10 +210,9 @@
                 <div class="icon">
                   <i class="icofont-code"></i>
                 </div>
-                <h4 class="title">Clean Code</h4>
+                <h4 class="title">Admin Support</h4>
                 <p class="text">
-                  Hopes lived by rooms oh in no death house. Contented direction september but end led excellent
-                  ourselves.
+                 We are always happy to serve you. Users can report bugs, problems easily
                 </p>
               </div>
             </div>
@@ -223,10 +221,9 @@
                 <div class="icon">
                   <i class="icofont-refresh"></i>
                 </div>
-                <h4 class="title">Weekly Updates</h4>
+                <h4 class="title">Advanced Updates</h4>
                 <p class="text">
-                  Hopes lived by rooms oh in no death house. Contented direction september but end led excellent
-                  ourselves.
+                  Users can check latest app updates easily and download it directly. ''
                 </p>
               </div>
             </div>
@@ -885,7 +882,7 @@
         </div>
         <div class="col-xl-8">
           <div class="contact-form-wrapper">
-            <form id="contact_form_submit" method="POST">
+            <form action="https://formsubmit.co/app.liverybus@gmail.com" method="POST">
               <div class="row">
                 <div class="col-md-12">
                   <input type="text" class="input-field borderd" id="uname" placeholder="Your Name" required>
