--- a/index.html
+++ b/index.html
@@ -897,7 +897,10 @@
                 <div class="col-12">
                   <button type="submit" class="mybtn1"> Send Message <i class="far fa-envelope"></i>
                   </button>
+                  <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
+                  <input type="hidden" name="_autoresponse" value="Thank You For Contacting Us">
                 </div>
+                
               </div>
             </form>
           </div>
