--- a/index.html
+++ b/index.html
@@ -884,6 +884,10 @@
           <div class="contact-form-wrapper">
             <form action="https://formsubmit.co/app.liverybus@gmail.com" method="POST">
               <div class="row">
+                <div>
+                   <input type="hidden" name="_next" value="https://liverybus.github.io">
+                  <input type="hidden" name="_autoresponse" value="Thank You For Contacting Us">
+                </div>
                 <div class="col-md-12">
                   <input type="text" class="input-field borderd" id="uname" placeholder="Your Name" required>
                 </div>
@@ -897,10 +901,6 @@
                 <div class="col-12">
                   <button type="submit" class="mybtn1"> Send Message <i class="far fa-envelope"></i>
                   </button>
-                </div>
-                <div class="col-12">
-                   <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
-                  <input type="hidden" name="_autoresponse" value="Thank You For Contacting Us">
                 </div>
                 
               </div>
