--- a/index.html
+++ b/index.html
@@ -880,28 +880,21 @@
             </li>
           </ul>
         </div>
+        
         <div class="col-xl-8">
           <div class="contact-form-wrapper">
             <form action="https://formsubmit.co/app.liverybus@gmail.com" method="POST">
               <div class="row">
                 <div>
-                   <input type="hidden" name="_next" value="https://liverybus.github.io">
+                  <input type="hidden" name="_next" value="https://liverybus.github.io">
                   <input type="hidden" name="_autoresponse" value="Thank You For Contacting Us">
-                </div>
-                <div class="col-md-12">
                   <input type="text" class="input-field borderd" id="uname" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-12">
-                  <input type="email" class="input-field borderd" id="email" placeholder="Eenter Your Email" required>
-                </div>
-                <div class="col-12">
+                  <input type="email" class="input-field borderd" id="email" placeholder="Enter Your Email" required>
                   <textarea class="input-field borderd textarea" rows="3" id="message" placeholder="Write your message here"
                     required></textarea>
-                </div>
-                <div class="col-12">
                   <button type="submit" class="mybtn1"> Send Message <i class="far fa-envelope"></i>
                   </button>
-                </div>
+
                 
               </div>
             </form>
