--- a/index.html
+++ b/index.html
@@ -888,14 +888,21 @@
                 <div>
                   <input type="hidden" name="_next" value="https://liverybus.github.io">
                   <input type="hidden" name="_autoresponse" value="Thank You For Contacting Us">
+                </div>
+                <div class="col-md-12">
                   <input type="text" class="input-field borderd" id="uname" placeholder="Your Name" required>
+                </div>
+                <div class="col-md-12">
                   <input type="email" class="input-field borderd" id="email" placeholder="Enter Your Email" required>
+                </div>
+                <div class="col-12">
                   <textarea class="input-field borderd textarea" rows="3" id="message" placeholder="Write your message here"
                     required></textarea>
+                </div>
+                <div class="col-12">
                   <button type="submit" class="mybtn1"> Send Message <i class="far fa-envelope"></i>
                   </button>
-
-                
+                </div>
               </div>
             </form>
           </div>
@@ -955,7 +962,7 @@
                 </a>
               </div>
               <div class="text">
-                <p>Thank you for visiting our app. 
+                <p>Thank you for visiting our website. 
                 </p>
               </div>
             </div>
